<resources>
    <string name="app_name">CupMovil</string>

    //AdminComentarios
    <string name="AdminComentarios1">Comentario</string>

    //AdminCompras
    <string name="AdminCompras1">Compras</string>
    <string name="AdminCompras2">Pendientes</string>
    <string name="AdminCompras3">Ventas</string>

    //AdminInventario
    <string name="AdminInventario1">Usuarios</string>
    <string name="AdminInventario2">Alimentos</string>
    <string name="AdminInventario3">Bebidas</string>

    //AdminUsuario
    <string name="AdminUsuario1">Usuarios</string>
    <string name="AdminUsuario2">Clientes</string>
    <string name="AdminUsuario3">Trabajadores</string>


    // carrito
    <string name="carrito1">Carrito</string>
    <string name="carrito2">Pendientes</string>
    <string name="carrito3">Completadas</string>


    //Contacto
    <string name="contacto1">Ponte en contacto</string>
    <string name="contacto2">Hablemos sobre cómo nuestro equipo de expertos puede ayudar.</string>
    <string name="contacto3">Enviar Mensaje</string>
    <string name="contactoH1">Nombre</string>
    <string name="contactoH2">Apellido</string>
    <string name="contactoH3">Correo</string>
    <string name="contactoH4">Numero de telefono</string>
    <string name="contactoH5">Déjanos un mensaje...</string>

    //Especiales
    <string name="especiales1">Buscar</string>
    <string name="especiales2">Café</string>
    <string name="especiales3">Bebidas</string>
    <string name="especiales4">Postres</string>
    <string name="especiales5">Cervezas</string>
    <string name="especiales6">Popular</string>
    <string name="especiales7">Ofertas</string>


    //Login
    <string name="login1">Bienvenido a CupMovil</string>
    <string name="login2">Iniciar Sesión</string>
    <string name="login3">Correo Electronico</string>
    <string name="login4">Contraseña</string>
    <string name="login5">¿Has olvidado tu contraseña?</string>
    <string name="login6">Iniciar Sesión</string>
    <string name="login7">¿No tienes una cuenta?</string>
    <string name="login8">Registrarse</string>



    //Menus
    <string name="Menus1">CAFÉ</string>
    <string name="Menus2">PIZZA</string>
    <string name="Menus3">ALITAS</string>
    <string name="Menus4">HAMBURGUESA</string>
    <string name="Menus5">CERVEZA</string>
    <string name="Menus6">POSTRE</string>


    //Nosotros
    <string name="Nosotros1">CUPHEAD CAFETERÍA</string>
    <string name="Nosotros2"> </string>
    <string name="Nosotros3">MISIÓN</string>
    <string name="Nosotros4">Brindar a nuestros clientes una experiencia memorable al fusionar la pasión por el buen café con un entorno temático inspirado en la estética vintage de los años 30. Nos comprometemos a ofrecer productos de calidad, un servicio excepcional y un ambiente divertido que inspire la creatividad y el disfrute en cada taza servida.
</string>
    <string name="Nosotros5">VISIÓN</string>
    <string name="Nosotros6">Convertirnos en la cafetería temática más icónica y querida, ofreciendo una experiencia única que combine el encanto retro con un ambiente acogedor y un café de la más alta calidad, creando un lugar donde cada visita sea un viaje en el tiempo lleno de sabor y nostalgia.</string>
    <string name="Nosotros7">NOSOTROS</string>
    <string name="Nosotros8">OBJETIVO</string>
    <string name="Nosotros9">Desarrollar una aplicación móvil en kotlin que beneficie a las empresas de servicios alimentarios a tener un mejor control y administración sobre sus registros de pedidos y ventas.</string>
    <string name="Nosotros10">Contáctate con nosotros</string>

    //Perfil
    <string name="Perfil1">Compras</string>
    <string name="Perfil2">Visitas</string>
    <string name="Perfil3">Puntos</string>
    <string name="Perfil4">Fecha:</string>
    <string name="Perfil5">Mesa:</string>
    <string name="Perfil6">Total:</string>



    //Producto_Alitas
    <string name="Producto_Alitas1">Alitas de Pollo</string>
    <string name="Producto_Alitas2">$120.00</string>
    <string name="Producto_Alitas3">Alitas bañadas en salsa buffalo, bbq o miel mostaza, servidas con apio y aderezo ranch.</string>
    <string name="Producto_Alitas4">Añadir al carrito</string>

    //Producto_Cafe
    <string name="cafe1">-</string>
    <string name="cafe2">1</string>
    <string name="cafe3">+</string>
    <string name="cafe4">Cappuccino</string>
    <string name="cafe5">$45.00</string>
    <string name="cafe6">Bebida de café a base de espresso, con leche vaporizada y una capa de espuma cremosa.</string>
    <string name="cafe7">Tamaño del café</string>
    <string name="cafe8">Añadir al carrito</string>

    //Producto_Cerveza
    <string name="cerveza1">-</string>
    <string name="cerveza2">1</string>
    <string name="cerveza3">+</string>
    <string name="cerveza4">Cerveza Artesanal</string>
    <string name="cerveza5">$60.00</string>
    <string name="cerveza6">Cerveza de trigo con un toque cítrico y notas de malta caramelizada.</string>
    <string name="cerveza7">Volumen</string>
    <string name="cerveza8">Añadir al carrito</string>



    //Producto_Hamburguesa
    <string name="hamburguesa1">-</string>
    <string name="hamburguesa2">1</string>
    <string name="hamburguesa3">+</string>
    <string name="hamburguesa4">Hamburguesa Clásica</string>
    <string name="hamburguesa5">$80.00</string>
    <string name="hamburguesa6">Hamburguesa de carne de res con lechuga, tomate, queso cheddar, y nuestra salsa especial.</string>
    <string name="hamburguesa7">Tamaño</string>
    <string name="hamburguesa8">Añadir al carrito</string>

    //Producto_Pizza
    <string name="pizza1">-</string>
    <string name="pizza2">1</string>
    <string name="pizza3">+</string>
    <string name="pizza4">Pizza Pepperoni</string>
    <string name="pizza5">$150.00</string>
    <string name="pizza6">Pizza mediana con pepperoni, queso mozzarella y salsa de tomate casera.</string>
    <string name="pizza7">Tamaño</string>
    <string name="pizza8">Añadir al carrito</string>

    //Producto_Postre
    <string name="Producto_Postre1">Brownie de Chocolate</string>
    <string name="Producto_Postre2">$50.00</string>
    <string name="Producto_Postre3">Brownie casero con chispas de chocolate y un toque de nuez.</string>
    <string name="Producto_Postre4">Porción</string>
    <string name="Producto_Postre5">Añadir al carrito</string>


    //Registro
    <string name="Registro1">Crear Nuevo Usuario</string>
    <string name="Registro2">Por favor rellenar los campos.</string>
    <string name="Registro3">Nombre Completo</string>
    <string name="Registro4">Estoy de acuerdo con los terminos y condiciones</string>
    <string name="Registro5">Crear Usuario</string>
    <string name="Registro6">Correo Electronico</string>
    <string name="Registro7">Contraseña</string>
    <string name="Registro8">Fecha de nacimiento</string>


    //Reservacion


    //card_producto1
    <string name="titulo">Nombre del Producto</string>
    <string name="precio">$99.99</string>
    <string name="descripcion">Descripción breve del producto</string>

    //item_order
    <string name="item_order1">Cafe Latte</string>
    <string name="item_order2">Coffeinopia Bogor</string>
    <string name="item_order3">Recoger</string>
</resources>