<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    android:id="@+id/main"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo_icon"
            android:layout_marginBottom="24dp" />

        <!-- Título -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="16dp" />

        <!-- Subtítulo -->
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login2"
            android:textSize="16sp"
            android:textColor="#838383"
            android:layout_marginBottom="24dp" />

        <!-- Campo Email -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login3"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <!-- Campo Contraseña -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login4"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="8dp" />

        <!-- Olvidó contraseña -->
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login5"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:layout_marginBottom="24dp" />

        <!-- Botón de inicio de sesión -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login6"
            android:backgroundTint="#F68B10"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">


            <!-- Registro -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login7"
                android:textSize="14sp"
                android:textColor="#A2A2A2"
                android:layout_gravity="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/login8"
                android:textSize="10sp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
