<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:fillViewport="true"
    android:padding="16dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_circle_24"
            android:backgroundTint="#809D9898"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="16dp"
            android:scaleType="center"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white"
            tools:ignore="MissingConstraints"/>


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_circle_24"
            android:backgroundTint="#809D9898"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="16dp"
            android:scaleType="center"
            android:src="@drawable/baseline_favorite_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Imagen del café -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:background="@drawable/rounded_button_background"
        android:clipToOutline="true"
        android:src="@drawable/cerveza_menus"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/baseline_remove_24"
            android:text="@string/cerveza1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/cerveza2"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/baseline_add_24"
            android:text="@string/cerveza3"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Título, precio y descripción -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/cerveza4"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/cerveza5"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cerveza6"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray" />

    <!-- Selector de tamaño -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cerveza7"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:backgroundTint="#F68B10"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/baseline_fastfood_24"
            app:tint="@color/black"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:src="@drawable/baseline_fastfood_24"
            app:tint="@color/black" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:src="@drawable/baseline_fastfood_24"
            app:tint="@color/black" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/baseline_fastfood_24"
            app:tint="@color/black"/>
    </LinearLayout>

    <!-- Botón de agregar al carrito -->
    <Button
        android:id="@+id/btnStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F68B10"
        android:text="@string/cerveza8"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:drawableLeft="@drawable/baseline_local_grocery_store_24"
        android:drawableTint="@color/white"
        android:drawablePadding="8dp" />

</LinearLayout>